Refactored relationships exercise based off javiers demo